bynkc/tests/fixtures/negative/234_invariant_not_bool/src/demo/a.bynk
context demo.a

agent Counter {
  key id: String

  store count: Cell[Int]

  invariant bad:
    count

  on call bump() -> Effect[()] {
    let cur = count
    count := cur + 1
    ()
  }
}
